--- a/Dolphin/Modules/Main/Base.lproj/LaunchScreen.storyboard
+++ b/Dolphin/Modules/Main/Base.lproj/LaunchScreen.storyboard
@@ -17,37 +17,45 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch_image" translatesAutoresizingMaskIntoConstraints="NO" id="bE5-BT-hHP">
-                                <rect key="frame" x="77" y="177.66666666666663" width="269" height="269"/>
+                                <rect key="frame" x="16" y="132" width="360" height="360"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="269" id="6Ar-lj-Tgp"/>
-                                    <constraint firstAttribute="width" constant="269" id="T1z-c7-R5d"/>
+                                    <constraint firstAttribute="height" constant="360" id="6Ar-lj-Tgp"/>
+                                    <constraint firstAttribute="width" constant="360" id="T1z-c7-R5d"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="middleTruncation" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xpM-sX-b8Q">
-                                <rect key="frame" x="84" y="483.66666666666674" width="225" height="98"/>
+                                <rect key="frame" x="81" y="445" width="250" height="98"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="98" id="wKW-ww-mAE"/>
                                 </constraints>
                                 <attributedString key="attributedText">
-                                    <fragment content="欢迎来到康来呼叫器">
+                                    <fragment content="欢迎来到">
                                         <attributes>
-                                            <color key="NSColor" red="0.2901961207" green="0.5411764979" blue="0.25098040700000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <color key="NSColor" red="0.35294118520000001" green="0.61176472900000001" blue="0.97254908080000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <font key="NSFont" size="25" name="PingFangSC-Semibold"/>
                                             <font key="NSOriginalFont" size="25" name="ZapfDingbatsITC"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                         </attributes>
                                     </fragment>
+                                    <fragment content="海豚生态平台">
+                                        <attributes>
+                                            <color key="NSColor" red="0.35294118520000001" green="0.61176472900000001" blue="0.97254908080000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <font key="NSFont" size="25" name="PingFangSC-Semibold"/>
+                                            <font key="NSOriginalFont" size="25" name="Helvetica"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
                                 </attributedString>
-                                <color key="highlightedColor" red="0.2901961207" green="0.5411764979" blue="0.25098040700000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="4uL-l2-Ynb"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="bE5-BT-hHP" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-114" id="GzV-lw-T0e"/>
-                            <constraint firstItem="xpM-sX-b8Q" firstAttribute="top" secondItem="bE5-BT-hHP" secondAttribute="bottom" constant="37" id="L0L-3d-Deb"/>
-                            <constraint firstItem="bE5-BT-hHP" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" constant="15" id="RGe-MY-UQ5"/>
-                            <constraint firstItem="xpM-sX-b8Q" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="fr8-lE-uFQ"/>
+                            <constraint firstItem="xpM-sX-b8Q" firstAttribute="top" secondItem="bE5-BT-hHP" secondAttribute="bottom" constant="-47" id="L0L-3d-Deb"/>
+                            <constraint firstItem="bE5-BT-hHP" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" constant="-0.5" id="RGe-MY-UQ5"/>
+                            <constraint firstItem="xpM-sX-b8Q" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" constant="9.5" id="fr8-lE-uFQ"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -57,6 +65,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="launch_image" width="492" height="477"/>
+        <image name="launch_image" width="477" height="477"/>
     </resources>
 </document>
